Support named function parameters.